@@ -647,6 +647,8 @@ Release 2.6.0 - UNRELEASED
 
     HDFS-6892. Add XDR packaging method for each NFS request (brandonli)
 
+    HDFS-6938. Cleanup javac warnings in FSNamesystem (Charles Lamb via wheat9)
+
 Release 2.5.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
